AWE-177 homepage hero compensate for left navbar logo

--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -500,6 +500,11 @@
                 padding-right: 0;
                 width: 50%;
                 justify-content: flex-end;
+                margin-left: 72px;
+            }
+
+            @include breakpoints("lg-desktop") {
+                margin-left: initial;
             }
 
             .o-hero__top {
