--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -658,6 +658,7 @@
 
             .-black-x {
                 right: 70%;
+                opacity: 0;
                 top: 20%;
                 width: 16%;
                 z-index: 1;
@@ -665,6 +666,7 @@
 
             .-blue-lines {
                 top: 58%;
+                opacity: 0;
                 right: 14%;
                 width: 10%;
                 z-index: 1;
@@ -677,6 +679,7 @@
 
             .-blue-plant {
                 right: 43%;
+                opacity: 0;
                 top: 23%;
                 width: 12%;
                 z-index: 1;
@@ -688,6 +691,7 @@
 
             .-fog-dots {
                 right: 16%;
+                opacity: 0;
                 top: 20%;
                 width: 50%;
                 z-index: 0;
@@ -695,6 +699,7 @@
 
             .-fog-eyeball {
                 right: 82%;
+                opacity: 0;
                 top: 10%;
                 width: 14%;
                 z-index: 0;
@@ -702,12 +707,14 @@
 
             .-fog-tag {
                 right: 88%;
+                opacity: 0;
                 top: 62%;
                 width: 8%;
             }
 
             .-green-go {
                 right: 25%;
+                opacity: 0;
                 top: 37%;
                 width: 16%;
                 z-index: 1;
@@ -720,6 +727,7 @@
 
             .-green-plant {
                 bottom: 37%;
+                opacity: 0;
                 right: 80%;
                 width: 18%;
             }
@@ -732,18 +740,21 @@
             }
 
             .-orange-cube {
+                opacity: 0;
                 right: 50%;
                 top: 8%;
                 width: 12%;
             }
 
             .-pink-asterisk {
+                opacity: 0;
                 right: 29%;
                 top: 76%;
                 width: 6%;
             }
 
             .-pink-drop {
+                opacity: 0;
                 right: 51%;
                 top: 32%;
                 width: 29%;
@@ -755,6 +766,7 @@
             }
 
             .-pink-raindrops {
+                opacity: 0;
                 right: 20%;
                 top: 1%;
                 width: 24%;
@@ -762,6 +774,7 @@
 
             .-red-prism {
                 bottom: 16%;
+                opacity: 0;
                 right: 80%;
                 width: 24%;
 
@@ -773,6 +786,7 @@
 
             .-red-teeth {
                 right: 15%;
+                opacity: 0;
                 top: 72%;
                 width: 2%;
 
@@ -783,12 +797,14 @@
             }
 
             .-salmon-blob {
+                opacity: 0;
                 right: 70%;
                 top: 14%;
                 width: 22%;
             }
 
             .-teal-asterisk {
+                opacity: 0;
                 top: 55%;
                 right: 36%;
                 width: 6%;
@@ -796,11 +812,13 @@
 
             .-teal-rainbow {
                 bottom: 50%;
+                opacity: 0;
                 right: 84%;
                 width: 24%;
             }
 
             .-yellow-squiggle {
+                opacity: 0;
                 right: 10%;
                 top: 18%;
                 width: 24%;
