--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -1,37 +1,33 @@
 .o-learn-about-us {
     &__container {
-        display: flex;
-        flex-direction: column;
         background-color: get-color-primary("fog");
         color: get-color-primary("after-hours-light");
         padding-top: 5rem;
         padding-bottom: 5rem;
 
         a {
+            border-bottom: 1px solid get-color("primary", "fresh");
+            color: get-color-primary("after-hours");
             font-family: $font-secondary;
             font-size: 18px;
             letter-spacing: 0.2em;
-            color: get-color-primary("after-hours");
-            border-bottom-width: 0.2em;
-            border-color: get-color-primary("fresh");
+            padding-bottom: 0.2em;
             text-decoration: none;
-            border-bottom-style: solid;
-            width: 160px;
+
             @include breakpoints("tablet") {
-                font-size: 20px; //@include font-size("small");
+                font-size: 20px;
                 font-weight: 500;
-                width: 180px;
             }
         }
 
         h2 {
             color: get-color-neutral("light-gray");
-            margin-bottom: 2rem;
-            margin-top: 2rem;
             font-size: 20px;
             font-size: 1.25rem;
             line-height: 32px;
             line-height: 2rem;
+            margin-bottom: 2rem;
+            margin-top: 2rem;
             @include breakpoints("tablet") {
                 font-size: 28px;
                 line-height: 48px;
@@ -48,8 +44,6 @@
     }
 
     &__content-container {
-        display: flex;
-        flex-direction: column;
         justify-content: center;
     }
 
