--- a/src/assets/scss/03_organism/_from-our-blog.scss
+++ b/src/assets/scss/03_organism/_from-our-blog.scss
@@ -8,14 +8,13 @@
             flex-direction: column;
             a.view-all-posts {
                 @include font-size("small");
+                border-bottom: 1px solid get-color("primary", "fresh");
+                color: get-color-primary("after-hours");
                 font-weight: 500;
                 line-height: 28px;
                 letter-spacing: 0.2em;
-                color: get-color-primary("after-hours");
-                border-bottom-width: 0.2em;
-                border-color: get-color-primary("fresh");
+                padding-bottom: 0.2em;
                 text-decoration: none;
-                border-bottom-style: solid;
                 width: 175px; // used to temporarily patch the bottom border length
             }
 
