--- a/src/assets/scss/03_organism/_work-cta.scss
+++ b/src/assets/scss/03_organism/_work-cta.scss
@@ -7,7 +7,7 @@
         padding-bottom: 5rem;
 
         a {
-            border-bottom: 1px solid get-color("primary", "fresh");
+            border-bottom: 0.075em solid get-color("primary", "fresh");
             font-family: $font-secondary;
             font-size: 18px;
             letter-spacing: 0.2em;
@@ -17,8 +17,8 @@
             width: 105px;
             @include breakpoints("tablet") {
                 font-size: 20px; //@include font-size("small");
-                font-weight: 500;
-                width: 120px;
+                font-weight: 600;
+                width: 121px;
             }
         }
 
