add delay for final menu item

--- a/src/assets/scss/03_organism/_menu.scss
+++ b/src/assets/scss/03_organism/_menu.scss
@@ -129,6 +129,10 @@
                 transition-delay: 1.25s, 1.25s;
             }
 
+            &:nth-of-type(6) {
+                transition-delay: 1.5s, 1.5s;
+            }
+
             &:hover {
                 opacity: 0.6;
             }
