reduce margin-right on contact form buttons below min width of phones

--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -105,8 +105,12 @@
         }
 
         .a-button {
-            margin-right: 60px;
+            margin-right: 30px;
             cursor: pointer;
+
+            @include breakpoints("phone") {
+                margin-right: 60px;
+            }
 
             &.-disabled {
                 cursor: default;
