--- a/src/assets/scss/01_atom/_buttons.scss
+++ b/src/assets/scss/01_atom/_buttons.scss
@@ -8,6 +8,7 @@
     font-weight: 600;
     letter-spacing: 0.2em;
     padding-bottom: 0.2em;
+    padding-left: 0.2em;
     background: transparent;
 
     &.-large {
