center homepage about us content vertically at larger viewports

--- a/src/assets/scss/02_molecule/_learn-about-us.scss
+++ b/src/assets/scss/02_molecule/_learn-about-us.scss
@@ -72,6 +72,7 @@
         flex-wrap: wrap;
         flex-direction: column-reverse;
         @include breakpoints("tablet") {
+            align-items: center;
             flex-direction: initial;
             flex-wrap: nowrap;
         }
