AWE-154 WorkList and WorkFriends navbar margin gutters

--- a/src/assets/scss/05_page/_work.scss
+++ b/src/assets/scss/05_page/_work.scss
@@ -25,6 +25,14 @@
         }
       }
     }
+
+    // Compensate for the left navbar icon
+    @include breakpoints("tablet") {
+        margin-left: 72px;
+    }
+    @include breakpoints("lg-desktop") {
+      margin-left: initial;
+    }
   }
 
   .o-hero {
