WorkCta right margin navbar gutter

--- a/src/assets/scss/03_organism/_work-cta.scss
+++ b/src/assets/scss/03_organism/_work-cta.scss
@@ -84,9 +84,11 @@
         // Compensate for the left navbar icon
         @include breakpoints("tablet") {
             margin-left: 72px;
+            margin-right: 72px;
         }
         @include breakpoints("lg-desktop") {
             margin-left: initial;
+            margin-right: initial;
         }
     }
 }
