swap work page hero image, edit margin and padding for it

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -89,6 +89,8 @@
 
                 img {
                     margin-top: 50px;
+                    margin-left: 38px;
+                    padding-right: 10px;
                 }
             }
         }
