--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -14,6 +14,7 @@
         "menu",
         "perk-list",
         "slider",
+        "team",
         "work-cta",
         "work-featured",
         "work-list";
