--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -1,22 +1,36 @@
 .o-team {
-    display: flex;
-    
+  display: flex;
+  position: relative;
+
+  .o-slider {
+
     div.team-grid-member {
-      position: relative;
 
       .expanded-team-member {
         background: rgba(get-color-primary("fresh"), .6);
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        left: 14%;
         position: absolute;
-        left: 0;
         top: 0;
-        width: 10000px;
-        height: 300%;
+        width: 100vw;
         z-index: 1;
 
         div {
           opacity: 1;
         }
+
+        &-image {
+          position: absolute;
+          left: 66%;
+          top: 24%;
+
+          img {
+            width: 25%;
+          }
+        }
       }
     }
-
+  }
 }
