--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -2,18 +2,13 @@
   display: flex;
   position: relative;
 
-  .o-slider {
-
-    div.team-grid-member {
-
-      .expanded-team-member {
+  .expanded-team-member {
         background: rgba(get-color-primary("fresh"), .6);
         display: flex;
         height: 100%;
         justify-content: center;
-        left: 14%;
         position: absolute;
-        top: 0;
+        top: 2px;
         width: 100vw;
         z-index: 1;
 
@@ -31,6 +26,4 @@
           }
         }
       }
-    }
-  }
 }
