--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -3,27 +3,47 @@
   position: relative;
 
   .expanded-team-member {
-        background: rgba(get-color-primary("fresh"), .6);
-        display: flex;
-        height: 100%;
-        justify-content: center;
-        position: absolute;
-        top: 2px;
-        width: 100vw;
-        z-index: 1;
+    background: rgba(get-color-primary("fresh"), .8);
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    top: 2px;
+    width: 100vw;
+    z-index: 1;
 
-        div {
-          opacity: 1;
-        }
+    div {
+      opacity: 1;
+    }
 
-        &-image {
-          position: absolute;
-          left: 66%;
-          top: 24%;
+    &-text {
+      color: get-color-primary("white");
+      left: 14%;
+      position: absolute;
+      top: 16%;
 
-          img {
-            width: 25%;
-          }
-        }
+      &-name {
+        @include font-size("largish");
+        margin-bottom: 0;
       }
+
+      &-position {
+        margin-top: 0.3em;
+      }
+
+      &-egg {
+        @include font-size("smallest");
+      }
+    }
+
+    &-image {
+      left: 51%;
+      position: absolute;
+      top: 16%;
+
+      img {
+        width: 51%;
+      }
+    }
+  }
 }
