--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -3,8 +3,10 @@
   position: relative;
 
   .expanded-team-member {
+    align-items: center;
     background: rgba(get-color-primary("fresh"), .8);
     display: flex;
+    flex-direction: column-reverse;
     height: 100%;
     justify-content: center;
     position: absolute;
@@ -16,19 +18,32 @@
       opacity: 1;
     }
 
+    p {
+      text-transform: lowercase;
+    }
+
     &-text {
       color: get-color-primary("white");
-      left: 14%;
-      position: absolute;
-      top: 16%;
+      position: initial;
+
+      @include breakpoints("tablet") {
+        left: 14%;
+        position: absolute;
+        top: 16%;
+      }
 
       &-name {
         @include font-size("largish");
-        margin-bottom: 0;
+        margin-bottom: 0.6em;
+
+        @include breakpoints("tablet") {
+          margin-bottom: 0;
+        }
       }
 
       &-position {
         margin-top: 0.3em;
+        @include font-size("small");
       }
 
       &-egg {
@@ -37,9 +52,16 @@
     }
 
     &-image {
-      left: 51%;
-      position: absolute;
-      top: 16%;
+      display: flex;
+      justify-content: center;
+      position: initial;
+
+      @include breakpoints("tablet") {
+        display: block;
+        left: 51%;
+        position: absolute;
+        top: 16%;
+      }
 
       img {
         width: 51%;
