--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -64,7 +64,11 @@
       }
 
       img {
-        width: 51%;
+        width: 61%;
+
+        @include breakpoints("tablet") {
+          width: 51%;
+        }
       }
     }
   }
