--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -10,7 +10,7 @@
     height: 100%;
     justify-content: center;
     position: absolute;
-    top: 2px;
+    top: 0;
     width: 100vw;
     z-index: 1;
 
