add breakpoints for left pos of pic for larger viewport widths

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -64,6 +64,14 @@
         top: 16%;
       }
 
+      @include breakpoints("lg-desktop") {
+        left: 46%;
+      }
+
+      @include breakpoints("xl-desktop") {
+        left: 41%;
+      }
+
       img {
         width: 67%;
 
