Feature/about page team section expand (#63)
* basic draft of team slider in place

* improve side scrolling, add click event

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* steps towards expanding the team on click

* start on styling the expanded team member

* removed the teamGridMember's on click for merging into feature/about-page-team-section base branch

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* steps towards getting the team expanding view working

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>
Co-authored-by: greg.evan@gmail.com <greg.evan@gmail.com>

* repoostion where the expanded team member dom element sits in the dom tree, adjust styling and callback methods between components accordingly

* desktop expand component is in a good spot, still needs animated and mobile view

* put the team slider in a container in order to dynamically change the number of slides shown depending on viewport width

* expanded team member view on mobile is getting there, a few more things to get right with it

* enlarge img width for mobile views

* further enlarge img width on mobile views

* put in a temp placeholder image

* px value of min width query was off by one for ipads

* no longer needed that top 2px due to other changes so set top 0 for the green mask

* remove pull icon from team slider

* Remove unneeded placeholders

* prevent pic from getting too large at v large viewport width

Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>

* add breakpoints for left pos of pic for larger viewport widths

* remove unused comment

* add missing semicolons, clean up usage of useEffect, clean up conditional rendering of expandedTeamMember

Co-authored-by: Peter Stone <pstone@andculture.com>
Co-authored-by: Aaron Weinberger <aweinberger@andculture.com>
Co-authored-by: greg.evan@gmail.com <greg.evan@gmail.com>

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -1,12 +1,84 @@
 .o-team {
+  display: flex;
+  position: relative;
+
+  .expanded-team-member {
+    align-items: center;
+    background: rgba(get-color-primary("fresh"), .8);
     display: flex;
+    flex-direction: column-reverse;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    z-index: 1;
 
     div {
-      width: 20%;
+      opacity: 1;
+    }
 
-      img {
-          width: 100%;
+    p {
+      text-transform: lowercase;
+    }
+
+    &-text {
+      color: get-color-primary("white");
+      position: initial;
+
+      @include breakpoints("tablet") {
+        left: 14%;
+        position: absolute;
+        top: 16%;
+      }
+
+      &-name {
+        @include font-size("largish");
+        margin-bottom: 0.6em;
+
+        @include breakpoints("tablet") {
+          margin-bottom: 0;
+        }
+      }
+
+      &-position {
+        margin-top: 0.3em;
+        @include font-size("small");
+      }
+
+      &-egg {
+        @include font-size("smallest");
       }
     }
 
+    &-image {
+      display: flex;
+      justify-content: center;
+      max-width: 691px;
+      position: initial;
+
+      @include breakpoints("tablet") {
+        display: block;
+        left: 51%;
+        position: absolute;
+        top: 16%;
+      }
+
+      @include breakpoints("lg-desktop") {
+        left: 46%;
+      }
+
+      @include breakpoints("xl-desktop") {
+        left: 41%;
+      }
+
+      img {
+        width: 67%;
+
+        @include breakpoints("tablet") {
+          width: 51%;
+        }
+      }
+    }
+  }
 }
