--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -27,6 +27,10 @@
       position: initial;
       width: 80%;
 
+      img {
+        width: 10%;
+      }
+
       @include breakpoints("tablet") {
         left: 14%;
         max-width: none;
