Team section expanded person asterisk alignment improvement

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -63,6 +63,11 @@
 
       &-egg {
         @include font-size("smallest");
+
+        img {
+          vertical-align: super;
+          width: 6%;
+        }
       }
     }
 
