--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -1,95 +1,100 @@
 .o-team {
-  display: flex;
-  position: relative;
-
-  .expanded-team-member {
-    align-items: center;
-    background: rgba(get-color-primary("fresh"), .8);
     display: flex;
-    flex-direction: column-reverse;
-    height: 100%;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    z-index: 1;
+    position: relative;
 
-    div {
-      opacity: 1;
-    }
-
-    p {
-      text-transform: lowercase;
-    }
-
-    &-text {
-      color: get-color-primary("white");
-      position: initial;
-      width: 80%;
-
-      @include breakpoints("tablet") {
-        left: 14%;
-        max-width: none;
+    .expanded-team-member {
+        align-items: center;
+        background: rgba(get-color-primary("fresh"), 0.8);
+        display: flex;
+        flex-direction: column-reverse;
+        height: 100%;
+        justify-content: center;
         position: absolute;
-        top: 16%;
-        width: initial;
-      }
+        top: 0;
+        width: 100vw;
+        z-index: 1;
 
-      &-name {
-        @include font-size(29px);
-        margin-bottom: 0.6em;
-
-        @media (min-width: 360px) {
-          @include font-size(35px);
+        div {
+            opacity: 1;
         }
 
-        @include breakpoints("sm-tablet") {
-          @include font-size("largish");
+        p {
+            text-transform: lowercase;
         }
 
-        @include breakpoints("tablet") {
-          margin-bottom: 0;
+        &-text {
+            color: get-color-primary("white");
+            position: initial;
+            width: 80%;
+
+            @include breakpoints("tablet") {
+                left: 14%;
+                max-width: none;
+                position: absolute;
+                top: 16%;
+                width: initial;
+            }
+
+            &-name {
+                @include font-size(29px);
+                margin-bottom: 0.6em;
+
+                @media (min-width: 360px) {
+                    @include font-size(35px);
+                }
+
+                @include breakpoints("sm-tablet") {
+                    @include font-size("largish");
+                }
+
+                @include breakpoints("tablet") {
+                    margin-bottom: 0;
+                }
+            }
+
+            &-position {
+                margin-top: 0.3em;
+                @include font-size("small");
+            }
+
+            &-egg {
+                @include font-size("smallest");
+            }
         }
-      }
 
-      &-position {
-        margin-top: 0.3em;
-        @include font-size("small");
-      }
+        &-image {
+            display: flex;
+            justify-content: center;
+            position: initial;
 
-      &-egg {
-        @include font-size("smallest");
-      }
+            @include breakpoints("tablet") {
+                display: block;
+                left: 51%;
+                max-width: 691px;
+                position: absolute;
+                top: 16%;
+            }
+
+            @include breakpoints("lg-desktop") {
+                left: 46%;
+            }
+
+            @include breakpoints("xl-desktop") {
+                left: 41%;
+            }
+
+            img {
+                width: 80%;
+
+                @include breakpoints("tablet") {
+                    width: 51%;
+                }
+            }
+        }
     }
 
-    &-image {
-      display: flex;
-      justify-content: center;
-      position: initial;
-
-      @include breakpoints("tablet") {
-        display: block;
-        left: 51%;
-        max-width: 691px;
-        position: absolute;
-        top: 16%;
-      }
-
-      @include breakpoints("lg-desktop") {
-        left: 46%;
-      }
-
-      @include breakpoints("xl-desktop") {
-        left: 41%;
-      }
-
-      img {
-        width: 80%;
-
-        @include breakpoints("tablet") {
-          width: 51%;
-        }
-      }
+    .slick-disabled {
+        opacity: 0.2;
+        pointer-events: none;
     }
-  }
 }
