--- a/src/assets/scss/03_organism/__organisms.scss
+++ b/src/assets/scss/03_organism/__organisms.scss
@@ -15,6 +15,7 @@
         "perk-list",
         "slider",
         "team",
+        "team-slider",
         "work-cta",
         "work-featured",
         "work-list";
