show focus on slider arrows

--- a/src/assets/scss/03_organism/_slider.scss
+++ b/src/assets/scss/03_organism/_slider.scss
@@ -154,6 +154,12 @@
             }
         }
     }
+
+    .slick-arrow {
+        &:focus {
+            outline: 1px solid #19A87C;
+        }
+    }
 }
 
 .pull-icon {
