--- a/src/assets/scss/03_organism/_team-slider.scss
+++ b/src/assets/scss/03_organism/_team-slider.scss
@@ -1,3 +1,6 @@
+// Slider styles that are only relevant to the slider on the team page
+// but not the one on the contact page (which is currently the only other usage of slider on site)
+
 .o-slider {
     .-disabled {
         opacity: 0.2;
@@ -5,8 +8,7 @@
     }
 }
 
-
-.-is-expanded {
+.o-slider.-is-expanded {
     .slick-dots li {
     cursor: default;
 
