--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -97,11 +97,15 @@
                 left: 54%;
                 max-width: 691px;
                 position: absolute;
-                top: 23%;
+                top: 21%;
             }
 
             @include breakpoints("laptop") {
                 left: 51%;
+            }
+
+            @include breakpoints(1250px) {
+                top: 19%;
             }
 
             @include breakpoints("lg-desktop") {
@@ -129,6 +133,50 @@
 
                 @include breakpoints("laptop") {
                     width: 51%;
+                }
+            }
+
+            span {
+                color: get-color("neutral", "light-gray");
+                font-family: $font-primary;
+                font-weight: 300;
+                left: 65%;
+                position: absolute;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+
+                @include breakpoints("phone") {
+                    @include font-size("medium");
+                    left: 77%;
+                }
+
+                @include breakpoints("sm-tablet") {
+                    left: 84%;
+                }
+
+                @include breakpoints("tablet") {
+                    @include font-size("smallest");
+                    left: 42%;
+                    top: 2%;
+                }
+
+                @include breakpoints("laptop") {
+                    @include font-size("small");
+                    left: 48%;
+                    top: 0;
+                }
+
+                @include breakpoints("lg-laptop") {
+                    left: 47%;
+                }
+
+                @include breakpoints("sm-desktop") {
+                    top: 2%;
+                }
+
+                @include breakpoints("desktop") {
+                    left: 48%;
+                    top: 1%;
                 }
             }
         }
