--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -138,6 +138,7 @@
 
             span {
                 color: get-color("neutral", "light-gray");
+                cursor: pointer;
                 font-family: $font-primary;
                 font-weight: 300;
                 left: 65%;
