--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -84,7 +84,7 @@
             }
         }
 
-        &-image {
+        &-image-div {
             display: flex;
             justify-content: center;
             opacity: 0;
