add another breakpoint to expanded team image

--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -132,6 +132,10 @@
                 @include breakpoints("laptop") {
                     width: 51%;
                 }
+
+                @include breakpoints("lg-desktop") {
+                    width: 61%;
+                }
             }
 
             span {
