--- a/src/assets/scss/03_organism/_team.scss
+++ b/src/assets/scss/03_organism/_team.scss
@@ -3,8 +3,11 @@
     position: relative;
 
     h2.people {
+        padding-left: 40px;
         margin-bottom: 1rem;
+
         @include breakpoints("tablet") {
+            padding-left: 0;
             margin-left: 80px;
         }
 
